# ASS

./: .gitignore  ASS.code-workspace  LICENSE  README.md  prj_context.md  pyproject.toml  requirements.txt  separate_sample.py
DolphinSFC/: README.md  __init__.py  dolphin_sfc.py  test_dolphin_sfc.py
DolphinSFCNPU/: README.md  __init__.py  dolphin_sfc.py  test_dolphin_sfc_npu.py
LICENSES/: Apache-2.0.md
TIGER/: __init__.py  base_model.py  test_tiger_online.py  tiger.py
dcase2026baseline/dcase2026_task4_baseline/: .gitignore  chat_stronger_variants.html  chat_stronger_variants1.html  recipes.md
docs/: ONLINE_SFC_NPU.md  sfc_tiger_0413.html  sfc_tiger_0414.html  sfc_tiger_0415.html  sfc_tiger_0421.html  sfc_tiger_v8.html
docs/large_tiger/: streaming_io.py  tiger_customed_old.py  tiger_online copy.py  tiger_online.py
docs/templates/: online_budget_results.csv  online_budget_results.summary.csv
spectral_feature_compression/: __init__.py
spectral_feature_compression/core/: separate.py
spectral_feature_compression/utils/: average_model_params.py  onnx_streaming.py  separator.py
tests/: test_online_core_streaming_and_export.py  test_online_frequency_preprocessing.py  test_online_hierarchical_soft_band_ffi_sfc_2d.py  test_online_hierarchical_soft_band_parallel_ffi_sfc_2d.py  test_online_hierarchical_soft_band_sfc_2d.py  test_online_model_wrapper.py
tools/: extract_chat_history.py
tools/online/: audit_onnx_model.py  compare_online_vs_raw.py  export_onnx_online_model.py  export_onnx_online_sfc2d.py  report_streaming_state_size.py  run_budget_sweep.sh  (+5 more)
(+52 files in other folders)
