[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "spectral_feature_compression"
authors = [{name = "Kohei Saijo", email = "saijo@pcl.cs.waseda.ac.jp"}]
readme = "README.md"
license = {file = "LICENSE"}
description = "A library of Spectral Feature Compression for source separation"
version = "0.0.1"

[project.urls]
Home = "https://kohei0209.github.io/"

[tool.ruff]
line-length = 120
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F", "UP", "B", "SIM", "I"]

[tool.ruff.lint.isort]
force-sort-within-sections = true

section-order = [
    "future",
    "typing",
    "standard-library",
    "utilities",
    "datascience",
    "torch",
    "torch-third-party",
    "third-party",
    "audio",
    "first-party",
    "local-folder"
]

[tool.ruff.lint.isort.sections]
"typing" = ["typing"]
"utilities" = ["progressbar", "omegaconf", "hydra"]
"datascience" = ["numpy", "scipy", "pandas", "matplotlib", "opt_einsum", "einops"]
"torch" = ["torch"]
"torch-third-party" = ["torchaudio", "torchvision", "auraloss", "lightning", "einops.layers"]
"audio" = ["librosa", "pypesq", "pystoi", "soundfile"]

[tool.ruff.per-file-ignores]
"__init__.py" = ["F401"]